# space-game-3

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix
crates/space-client-tui/: Cargo.toml
crates/space-client-tui/src/: app.rs  args.rs  command_input.rs  history.rs  lib.rs  main.rs  net.rs  plain.rs  terminal.rs  ui.rs
crates/space-client-tui/tests/: plain_smoke.rs
crates/space-game/: Cargo.toml
crates/space-game-ephemeris/: Cargo.toml  design_notes.md
crates/space-game-ephemeris/src/: error.rs  lib.rs  manifest.rs  object.rs  registry.rs  resolution.rs  source.rs  state.rs  time.rs  vector.rs  world.rs
crates/space-game-ephemeris/src/providers/: game.rs  mod.rs  spice.rs
crates/space-game-ephemeris/tests/: ephemeris_core.rs
crates/space-game-protocol/: Cargo.toml
crates/space-game-protocol/src/: lib.rs
crates/space-server/: Cargo.toml
crates/space-server/data/: demo_registry.toml
crates/space-server/src/: clock.rs  command.rs  config.rs  lib.rs  main.rs  navigation.rs  query.rs  ship.rs  web.rs
data/ephemeris/: manifest.toml
docs/: initial_vertical_slice_design.md  space-game-planned-design-overview.md
openspec/changes/add-basic-flight-plans/: design.md  proposal.md  tasks.md
openspec/changes/add-ephemeris-assets/: design.md  proposal.md  tasks.md
openspec/changes/add-ephemeris-core/: design.md  proposal.md  tasks.md
openspec/changes/add-networked-tui-client/: proposal.md  tasks.md
openspec/changes/add-plain-client-mode/: tasks.md
openspec/changes/add-player-ship-state/: design.md  proposal.md  tasks.md
openspec/changes/add-simulation-clock/: design.md  tasks.md
openspec/changes/add-tui-command-editing/: proposal.md  tasks.md
openspec/changes/improve-ship-navigation/: proposal.md  tasks.md
openspec/changes/introduce-spatial-position-model/: design.md  proposal.md  tasks.md
openspec/changes/list-downloaded-ephemeris-objects/: design.md  tasks.md
openspec/changes/use-minimal-real-ephemeris-objects/: design.md  proposal.md  tasks.md
openspec/specs/authoritative-space-server/: spec.md
openspec/specs/ephemeris-core/: spec.md
openspec/specs/network-protocol/: spec.md
openspec/specs/player-ship-state/: spec.md
openspec/specs/ship-flight-plans/: spec.md
openspec/specs/ship-navigation/: spec.md
openspec/specs/simulation-clock/: spec.md
(+51 files in other folders)
