[package]
name = "space-client-tui"
version = "0.1.0"
edition = "2021"

[lib]
name = "space_client_tui"
path = "src/lib.rs"

[[bin]]
name = "space-client-tui"
path = "src/main.rs"

[dependencies]
color-eyre = "0.6"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
ratatui = "0.29"
serde_json = "1"
space-game-protocol = { path = "../space-game-protocol" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
tracing = "0.1"
url = "2"
