[package]
name = "space-client-tui"
version = "0.1.0"
edition = "2021"

[lib]
name = "space_client_tui"
path = "src/lib.rs"

[[bin]]
name = "space-client-tui"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std"] }
color-eyre = "0.6"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
ratatui = "0.29"
serde_json = "1"
space-game-protocol = { path = "../space-game-protocol" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
tracing = "0.1"
tui-input = "0.14.0"
url = "2"

[dev-dependencies]
axum = "0.7"
space-server = { path = "../space-server" }
