[package]
name = "space-game-ephemeris"
version = "0.1.0"
edition = "2021"

[lib]
name = "space_game_ephemeris"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
thiserror = "2"
toml = "0.8"
ureq = "2"

[dev-dependencies]
tempfile = "3"
