[package]
name = "space-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "space_server"
path = "src/lib.rs"

[[bin]]
name = "space-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
futures = "0.3"
serde_json = "1"
space-game-ephemeris = { path = "../space-game-ephemeris" }
space-game-protocol = { path = "../space-game-protocol" }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio-tungstenite = "0.24"
